Changes regarding the slider inside content and Project section spacing fixed. Also Formaatted the code.

--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
-
 }
 
 /* Navbar style start */
@@ -15,7 +13,7 @@
     z-index: 1000;
     background-color: white;
     box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
-    display:flex;
+    display: flex;
     justify-content: space-between;
     align-items: center;
 }
@@ -48,51 +46,27 @@ span {
     font-weight: bold;
     white-space: normal;
 }
-.float-right {
-    float: right;
-
-}
-
-.mr-40 {
-    margin-right: 40px;
-}
 
 /* navbar style End */
 
 /* Slider style start */
 
 .slider {
-    margin: auto ;
+    margin: auto;
     position: relative;
-    /* left: 10px; */
-    max-height: 100%;
     font-size: 30px;
     font-family: "Segoe UI", Arial, sans-serif;
-    max-width: 1500px;
-}
-
-
-.inside-img {
-    max-width: 100%;
-    height: auto;
-    /* z-index: 2; */
-}
-
-.inside-content {
-    border: 2px solid black;
-    position: absolute;
-    z-index: 1;
-    letter-spacing: 4px;
-    color: white;
-
-    left: 50% ;
-    top : 50% ; 
-    /* transform: translate(-50%, -50%); */
-    
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: auto;
+    overflow: auto;
+    width: 100%;
+}
+
+.inside-content {
+    position: absolute;
+    letter-spacing: 4px;
+    color: white;
 }
 
 .boxshadow {
@@ -107,7 +81,6 @@ span {
 
 .project-section {
     margin: 45px 15px;
-    position: relative;  
 }
 
 .section-head p {
@@ -137,8 +110,6 @@ span {
 
 .project-item-head {
     position: absolute;
-    /* left: 10px; */
-    /* top: 10px; */
     padding: 8px 16px;
     color: white;
     background-color: black;
@@ -146,14 +117,12 @@ span {
 
 
 /* About section start */
-
 .about-section {
     margin: 45px 15px;
     padding: 0px;
     max-width: 100%;
     filter: grayscale(75%);
 }
-
 
 .about-head hr {
     opacity: 0.2;
@@ -163,7 +132,6 @@ span {
     display: flex;
     height: auto;
     width: 100%;
-
 }
 
 .about-item {
@@ -172,7 +140,6 @@ span {
     top: 0;
     font-weight: 400;
     margin: 10px 14px 0px 0px;
-    /* text-align: center; */
 }
 
 .about-item-head {
@@ -204,9 +171,6 @@ span {
 
 /* Start Contact section */
 .contact-section {
-
-    /* outline: 2px solid black ;  */
-
     margin: 45px 15px;
     max-width: 100%;
 }
@@ -216,7 +180,6 @@ span {
 }
 
 .contact-item {
-    /* display: block; */
     padding: 10px 0px 8px 4px;
     width: 100%;
     margin-bottom: 20px;
@@ -239,7 +202,6 @@ span {
 /* contact section End */
 
 /* footter section start */
-
 .map {
     width: 100%;
     left: 50px;
@@ -250,10 +212,6 @@ span {
     max-width: 100%;
 }
 
-* {
-    margin: 0;
-}
-
 .footer-bar {
     outline: 2px solid black;
     background-color: black;
@@ -262,7 +220,6 @@ span {
     text-align: center;
     padding-top: 30px;
     font-size: 17px;
-
 }
 
 
@@ -270,5 +227,5 @@ span {
     text-align: center;
     text-decoration: underline;
     color: white;
-    
 }
+/* footter section Ends */
